# toq

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
crates/toq-cli/: Cargo.toml
crates/toq-cli/src/: main.rs
crates/toq-cli/src/a2a/: client.rs  handlers.rs  mod.rs  task_store.rs  types.rs
crates/toq-cli/src/api/: handlers.rs  mod.rs  state.rs  types.rs
crates/toq-cli/src/llm/: anthropic.rs  bedrock.rs  handler.rs  mod.rs  ollama.rs  openai.rs  redact.rs
crates/toq-cli/tests/: integration.rs
crates/toq-core/: Cargo.toml
crates/toq-core/src/: adapter.rs  card.rs  compress.rs  config.rs  connection.rs  constants.rs  crypto.rs  delivery.rs  discovery.rs  dns.rs  e2e.rs  envelope.rs  error.rs  error_catalog.rs  framing.rs  handler.rs  handshake.rs  keystore.rs  lib.rs  messaging.rs  negotiation.rs  policy.rs  ratelimit.rs  replay.rs  server.rs  session.rs  streaming.rs  transport.rs  types.rs
crates/toq-core/tests/: core_tests.rs
