[package]
name = "toq"
description = "CLI for toq protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "toq"
path = "src/main.rs"

[dependencies]
toq-core = { path = "../toq-core" }
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
inquire = "0.9"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
