[package]
name = "toq-cli"
description = "Encrypted agent-to-agent communication daemon and CLI"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["agent", "a2a", "protocol", "daemon", "cli"]
categories = ["command-line-utilities", "network-programming", "artificial-intelligence", "cryptography", "security"]

[[bin]]
name = "toq"
path = "src/main.rs"

[dependencies]
toq-core = { version = ">=0.1.0-alpha.1", path = "../toq-core" }
aes-gcm = "0.10"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
hex = "0.4"
hmac = "0.12"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
inquire = "0.9"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = "0.5.3"

[dev-dependencies]
assert_cmd = "2.1"
http-body-util = "0.1"
predicates = "3.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tempfile = "3.26"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2.1.3"
