[package]
name = "toq-core"
description = "Core protocol library for toq protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
thiserror = "2"
