[package]
name = "toq-core"
description = "Encrypted agent-to-agent communication protocol library"
version = "0.1.0-dev.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["agent", "a2a", "protocol", "encryption", "communication"]
categories = ["cryptography", "network-programming", "authentication", "artificial-intelligence", "security"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "time", "process"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
flate2 = "1"
zstd = "0.13"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
